--- a/diretoria.html
+++ b/diretoria.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8">
 		<!-- Always force latest IE rendering engine or request Chrome Frame -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>FNTF - Federação Nacional dos Trabalhadores Ferroviários</title>		
+        <title>STEFZA - Sindicato dos Trabalhadores em Empresas Ferroviárias da Zona Araraquarense</title>
 		<!-- Meta Description -->
         <meta name="description" content="-">
         <meta name="keywords" content="-">
