--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 		
 		<!-- Fontawesome Icon font -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/font-awesome.min.css">
 		<!-- bootstrap.min -->
-        <link rel="stylesheet" href="css/jquery.fancybox.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/jquery.fancybox.css">
 		<!-- bootstrap.min -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/bootstrap.min.css">
 		<!-- bootstrap.min -->
-        <link rel="stylesheet" href="css/owl.carousel.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/owl.carousel.css">
 		<!-- bootstrap.min -->
-        <link rel="stylesheet" href="css/slit-slider.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/slit-slider.css">
 		<!-- bootstrap.min -->
-        <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/animate.css">
 		<!-- Main Stylesheet -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="http://www.sindpaulista.org.br/jsb/stefza/css/main.css">
 
 		<!-- Modernizer Script for old Browsers -->
         <script src="js/modernizr-2.6.2.min.js"></script>
 		
 		<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-        <link rel="stylesheet" type="text/css" href="wow-home-news/engine1/style.css" />
+        <link rel="stylesheet" type="text/css" href="http://www.sindpaulista.org.br/jsb/stefza/wow-home-news/engine1/style.css" />
         <script type="text/javascript" src="wow-home-news/engine1/jquery.js"></script>
         <!-- End WOWSlider.com HEAD section -->
 
@@ -84,12 +84,12 @@
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
                         <li><a href="#">Home</a></li>
-                        <li><a href="institucional.html">O Sindicato</a></li>
-                        <li><a href="diretoria.html">Diretoria</a></li>
-                        <li><a href="acordo-coletivo">Acordos Coletivos</a></li>
+                        <li><a href="http://www.sindpaulista.org.br/jsb/stefza/institucional.html">O Sindicato</a></li>
+                        <li><a href="http://www.sindpaulista.org.br/jsb/stefza/diretoria.html">Diretoria</a></li>
+                        <li><a href="http://www.sindpaulista.org.br/jsb/stefza/acordo-coletivo">Acordos Coletivos</a></li>
 						<li><a href="#">Sindicalize-se </a></li>
-                        <li><a href="artigos-noticias.html">Artigos & Notícias</a></li>
-						<li><a href="contato.html">Fale Conosco</a></li> 
+                        <li><a href="http://www.sindpaulista.org.br/jsb/stefza/artigos-noticias.html">Artigos & Notícias</a></li>
+						<li><a href="http://www.sindpaulista.org.br/jsb/stefza/contato.html">Fale Conosco</a></li> 
                     </ul>
                 </nav>
 				<!-- /main nav -->
